--- a/WebContent/single-movie.html
+++ b/WebContent/single-movie.html
@@ -18,14 +18,11 @@
       font-weight: normal;
     }
   </style>
-  <!-- Required meta tags -->
+
   <meta charset="utf-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-
 
   <title>Single Movie</title>
 </head>
@@ -37,16 +34,15 @@
 
   <button id="checkout-button">Checkout</button>
   <button id="logout-button">Logout</button>
-
 </div>
 
 <div style="width:90%; margin: 0 auto; font-family: Verdana;">
-  <!-- Back Button -->
-  <a href="index.html">← Back to Movie List</a>
+  <button id="go-back-button" class="btn btn-primary mb-3">← Back to Browsing</button>
 
-  <h1 style="color:black;font-size: 50px; padding-top:20px; padding-bottom:20px;font-family: Verdana;font-weight: normal ">Single Movie Page</h1>
+  <h1 style="color:black;font-size: 50px; padding-top:20px; padding-bottom:20px;font-family: Verdana;font-weight: normal">
+    Single Movie Page
+  </h1>
 
-  <!-- Movie basic info -->
   <h3 id="movie_info"></h3>
 
   <div style="display: flex; justify-content: center; overflow-x: auto;">
@@ -62,19 +58,16 @@
       </tr>
       </thead>
 
-      <!-- Table body populated by single-movie.js -->
       <tbody id="movie_table_body"></tbody>
     </table>
   </div>
 
 </div>
 
-<!-- jQuery and Bootstrap -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-<!-- Load session info -->
 <script>
   $.ajax({
     url: "api/index",
@@ -88,7 +81,6 @@
     }
   });
 
-  // Go back button
   $("#go-back-button").click(function() {
     const origin = sessionStorage.getItem("origin_page");
     if (origin) {
@@ -98,11 +90,9 @@
     }
   });
 
-  // Logout button
   $("#logout-button").click(() => window.location.replace("logout"));
 </script>
 
-<!-- Single Movie JS -->
 <script src="single-movie.js"></script>
 
 </body>
