--- a/WebContent/single-star.html
+++ b/WebContent/single-star.html
@@ -18,11 +18,9 @@
         }
     </style>
 
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
     <title>Single Star</title>
@@ -39,8 +37,7 @@
 </div>
 
 <div style="width:90%; margin: 0 auto; font-family: Verdana;">
-    <!-- Back Button -->
-    <button id="go-back-button" class="btn btn-link mb-3">← Back to Movie List</button>
+    <button id="go-back-button" class="btn btn-primary mb-3">← Back to Browsing</button>
 
     <h1>Single Star Page</h1>
 
@@ -60,15 +57,12 @@
     </div>
 </div>
 
-<!-- jQuery and Bootstrap -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-<!-- Load session info -->
 <script>
     $(document).ready(function() {
-        // Authentication check
         $.ajax({
             url: "api/index",
             method: "GET",
@@ -81,7 +75,6 @@
             }
         });
 
-        // Go back button
         $("#go-back-button").click(function() {
             const origin = sessionStorage.getItem("origin_page");
             if (origin) {
@@ -91,12 +84,10 @@
             }
         });
 
-        // Logout button
         $("#logout-button").click(() => window.location.replace("logout"));
     });
 </script>
 
-<!-- Single Star JS -->
 <script src="single-star.js"></script>
 
 </body>
